@@ -1,0 +1,11 @@
+useless-with-lock:7:0::'threading.Lock()' directly created in 'with' has no effect:HIGH
+useless-with-lock:10:0::'threading.Lock()' directly created in 'with' has no effect:HIGH
+useless-with-lock:13:0::'threading.Lock()' directly created in 'with' has no effect:HIGH
+useless-with-lock:16:0::'threading.RLock()' directly created in 'with' has no effect:HIGH
+useless-with-lock:19:0::'threading.RLock()' directly created in 'with' has no effect:HIGH
+useless-with-lock:22:0::'threading.Condition()' directly created in 'with' has no effect:HIGH
+useless-with-lock:25:0::'threading.Condition()' directly created in 'with' has no effect:HIGH
+useless-with-lock:28:0::'threading.Semaphore()' directly created in 'with' has no effect:HIGH
+useless-with-lock:31:0::'threading.Semaphore()' directly created in 'with' has no effect:HIGH
+useless-with-lock:34:0::'threading.BoundedSemaphore()' directly created in 'with' has no effect:HIGH
+useless-with-lock:37:0::'threading.BoundedSemaphore()' directly created in 'with' has no effect:HIGH
