@@ -140,6 +140,11 @@ Release date: TBA
 
   Closes #5216
 
+* Added new checker ``useless-with-lock`` to find incorrect usage of with statement and threading module locks.
+  Emitted when ``with threading.Lock():`` is used instead of ``with lock_instance:``.
+
+  Closes #5208
+
 
 What's New in Pylint 2.11.2?
 ============================
